--- a/Css/Kasper.css
+++ b/Css/Kasper.css
@@ -71,6 +71,79 @@ header {
     z-index: 2;
 }
 
+header a {
+    height: 102px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.T1 {
+    width: 50px;
+    height:50px;
+    margin: 50px auto;
+    border-radius: 50%;
+    border: 3px solid #673AB7;
+    border-left-color: #ffffff00;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-duration: 9s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+
+}
+
+.T1::after {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 3px solid #607d8b;
+    border-top-color: #ffffff00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-duration: 6s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+
+}
+
+.T1::before {
+    content: "";
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 3px solid #3f51b5;
+    border-bottom-color: #ffffff00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: rotate;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 header .container {
     display: flex;
     justify-content: space-between;
@@ -166,7 +239,7 @@ header .container .form {
     position: relative;
     min-height: 100vh;
     background-color: black;
-    background-image: url(/img/pexels-valiphotos-589840.jpg);
+    background-image: url(img/pexels-valiphotos-589840.jpg);
     background-size: cover;
 }
 
@@ -249,9 +322,9 @@ header .container .form {
     width: 15px;
     height: 15px;
     background-color: var(--white);
-    border: 2px solid black;
+    border: 2px solid var(--main-col);
     border-radius: 50%;
-    bottom: -18px;
+    bottom: -19px;
     left: calc(50% - 10px);
 }
 
@@ -260,7 +333,7 @@ header .container .form {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: black;
+    background-color: var(--text-col);
     width: 228px;
     bottom: -10.5px;
     left: calc(50% - 114px);
@@ -346,7 +419,7 @@ header .container .form {
 
 .responsive {
     margin-top: 100px;
-    background-image: url(/img/pexels-arshad-sutar-1749303.jpg);
+    background-image: url(img/pexels-arshad-sutar-1749303.jpg);
     background-size: cover;
     height: 70vh;
     width: 100%;
@@ -739,7 +812,7 @@ header .container .form {
 }
 
 .about .container .skills .skill-prog .prog {
-    background-color: var(--text-col);
+    background-color: #9e9e9e78;
     height: 25px;
 }
 
@@ -757,7 +830,7 @@ header .container .form {
     width: 40px;
     text-align: center;
     font-weight: 100;
-    background-color: black;
+    background-color: var(--text-col);
     color: white;
     border-radius: 5px;
     right: -20px;
@@ -769,7 +842,7 @@ header .container .form {
     position: absolute;
     border-style: solid;
     border-width: 8px;
-    border-color: black transparent transparent transparent;
+    border-color: var(--text-col) transparent transparent transparent;
     right: -8px;
     top: -16px;
 }
@@ -777,7 +850,7 @@ header .container .form {
 /* about-end */
 /* Qoute-start */
 .qoute {
-    background-image: url(/img/pexels-elīna-arāja-3309775.jpg);
+    background-image: url(img/pexels-elīna-arāja-3309775.jpg);
     width: 100%;
     height: 50vh;
     background-size: cover;
@@ -936,7 +1009,7 @@ header .container .form {
 /* price-end */
 /* Subscribe-start */
 .subscribe {
-    background-image: url(/img/pexels-cátia-matos-1072179.jpg);
+    background-image: url(img/pexels-cátia-matos-1072179.jpg);
     background-size: cover;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -1094,7 +1167,7 @@ header .container .form {
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
-    background-image: url(/img/pexels-muffin-creatives-1629998.jpg);
+    background-image: url(img/pexels-muffin-creatives-1629998.jpg);
     background-size: cover;
     position: relative;
 }
